# deeple

./: .stestr.conf  Jenkinsfile  README.md  setup.cfg  tox.ini
deeple/dataset/: make_dataset.py
deeple/features/: build_features.py
deeple/models/: deepaas_api.py
deeple/tests/: test_unit_model.py
deeple/visualization/: visualize.py
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: 1.0-deeple_start.py2.ipynb  1.0-deeple_start.py3.ipynb
