[metadata]
name = deeple
summary = Deep learning tutorial
description-file =
    README.md
author = Your name (or your organization/company/team)
author-email = luis.franco@usc.es
version = 0.0.0
license = MIT
home-page = https://github.com/luisfrvz/deeple
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python

    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5


[files]
packages =
    deeple

[entry_points]

deepaas.model = 
    deeple = deeple.models.deepaas_api

